Format to HTML5

--- a/src/html/documents/about-rss.html
+++ b/src/html/documents/about-rss.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>RSSについて</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>RSSについて</h1>
-    <p>Published on 2003-11-23 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
+    <p>Published on 2003-11-23 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
     <div class="note">
       <p>この文書は2004年頃に書かれたもので、かなりの部分が時代遅れな記述となっています。更にいくらか誤解や嘘も含まれますが、もう修正できません。</p>
