--- a/src/html/documents/adding-meaning-to-your-http-error-pages.html
+++ b/src/html/documents/adding-meaning-to-your-http-error-pages.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>HTTPエラーページに意味を持たせよう</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>HTTPエラーページに意味を持たせよう</h1>
-    <p>Published on: 2009-10-03</p>
 
+    <p>Published on: 2009-10-03</p>
 
     <p>Translation of: <a href="http://dev.opera.com/articles/view/adding-meaning-to-http-error-pages/">Adding meaning to your HTTP error pages!</a> by <a href="http://dev.opera.com/author/2929195">Stuart Colville</a></p>
 
