--- a/src/html/documents/ala-whitespace.html
+++ b/src/html/documents/ala-whitespace.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
@@ -7,6 +7,7 @@
     <title>余白の美</title>
 
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
+
     <style>
       .clipart {
         float: right;
