--- a/src/html/documents/cairs.html
+++ b/src/html/documents/cairs.html
@@ -1,16 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>Complex @import rules</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>Complex @import rules</h1>
+
     <p>Published on 2004-02-27 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
     <p>各ブラウザでサポート状況がマチマチな@importルールのサポート状況の表です。</p>
+
     <table>
       <tr>
         <th rowspan="2">Code</th>
