--- a/src/html/documents/favicon-cheat-sheet-ja.html
+++ b/src/html/documents/favicon-cheat-sheet-ja.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
 
     <title>ファビコン・カンニング・ペーパー</title>
@@ -10,10 +10,13 @@
   </head>
   <body>
     <h1>ファビコン・カンニング・ペーパー</h1>
+
     <p>Translation of: <a href="https://github.com/audreyr/favicon-cheat-sheet">favicon-cheat-sheet</a></p>
+
     <p>Published on: 2013-09-11</p>
 
     <p>ファビコンのサイズや形式についての読むと頭が痛くなる偏執的なカンニング・ペーパーです。以下のURLを参考にしました:</p>
+
     <ul>
       <li><a href="http://mathiasbynens.be/notes/rel-shortcut-icon">rel=&quot;shortcut icon&quot; considered harmful · Mathias Bynens</a> &lt;-- special thanks <a href="https://github.com/mathiasbynens">@mathiasbynens</a></li>
       <li><a href="http://mathiasbynens.be/notes/touch-icons">Everything you always wanted to know about touch icons · Mathias Bynens</a> &lt;-- special thanks <a href="https://github.com/mathiasbynens">@mathiasbynens</a></li>
@@ -24,12 +27,19 @@
       <li><a href="http://www.ravelrumba.com/blog/android-apple-touch-icon/">Getting Android to Recognize Apple Touch Icons - Ravelrumba by Rob Flaherty</a></li>
       <li><a href="http://msdn.microsoft.com/en-us/library/ie/gg491740(v=vs.85).aspx">Customizing the Site Icon (Windows)</a></li>
     </ul>
+
     <h2>HTMLでのマークアップ</h2>
+
     <h3>基本</h3>
+
     <p>メインになるファビコンについては各ブラウザーでの互換性を考慮して<a href="https://github.com/mathiasbynens">HTMLでは特に指定しないのが望ましい</a>です。単に<code>favicon.ico</code>という名前でドメインのルートに配置するだけで構いません。</p>
+
     <p>こうするとIE6も含めすべてのデスクトップ向けブラウザー(SeaMonkey以外)のあらゆるバージョンでうまくいきます。</p>
+
     <h3>推奨</h3>
+
     <p>以下のコードは指定しておくと良いかもしれません:</p>
+
     <ol>
       <li><p>iOS 2.0以降とAndroid 2.1以降向けのタッチ・アイコン:</p>
         <pre><code class="language-html">&lt;link rel=&quot;apple-touch-icon-precomposed&quot; href=&quot;path/to/favicon-152.png&quot;&gt;</code></pre>
@@ -40,8 +50,11 @@
         <p>あなたの好きな色で<code>#FFFFFF</code>は置き換えましょう。</p>
       </li>
     </ol>
+
     <h3>任意(偏執的な方だけどうぞ)</h3>
+
     <p>ありとあらゆるものをカバーしたいのならば以下のようにすることになります:</p>
+
     <ol>
       <li><p><a href="http://mathiasbynens.be/notes/touch-icons">Appleの各デバイス向けタッチ・アイコン</a>の全サイズ:</p>
     <pre><code class="language-html">&lt;!-- For iPad with high-resolution Retina display running iOS ≥ 7: --&gt;
@@ -67,8 +80,11 @@
     <p><em>訳注:</em> 必要なサイズで作成し、<code>sizes</code>属性を使ってそのサイズを教えてやるということです。</p>
     </li>
     </ol>
+
     <h2>画像の作成</h2>
+
     <p>最低でも以下のものは作りましょう:</p>
+
     <table>
       <thead>
         <tr>
@@ -85,8 +101,11 @@
         </tr>
       </tbody>
     </table>
+
     <p><code>favicon.ico</code>について詳しくは後述しますが、ひとつのファイルで複数のサイズをまかなえます。</p>
+
     <p>iOSやAndroidへ簡単に対応したい場合は以下のサイズで作成します:</p>
+
     <table>
       <thead>
         <tr>
@@ -103,8 +122,11 @@
         </tr>
       </tbody>
     </table>
+
     <p>しかしながら複雑なアイコンの場合、デバイスによる縮小がきれいに行われないことがあることは頭に入れておいた方が良いでしょう。きれいに縮小されるように細かい修正を行う必要があるかもしれません。</p>
+
     <p>偏執狂のあなたは以下のサイズも作りましょう:</p>
+
     <table>
       <thead>
         <tr>
@@ -161,8 +183,11 @@
         </tr>
       </tbody>
     </table>
+
     <h2>ICOファイル</h2>
+
     <p><code>ico</code>ファイルはサイズの違う<code>.bmp</code>や<code>.png</code>のアイコンを複数まとめることができるフォーマットです。<code>favicon.ico</code>では以下のサイズを作れば十分でしょう:</p>
+
     <table>
       <thead>
         <tr>
@@ -185,7 +210,9 @@
         </tr>
       </tbody>
     </table>
+
     <p>偏執狂のあなたは、1-3KBのファイルサイズの増加を気にしないのなら、以下のサイズも<code>favicon.ico</code>に含めると良いでしょう:</p>
+
     <table>
       <thead>
         <tr>
@@ -204,16 +231,23 @@
         </tr>
       </tbody>
     </table>
+
     <p>まずきっちりと<code>.png</code>を作り、それを元にして<code>.ico</code>を作成しましょう。</p>
+
     <p><em>TODO:</em> IE9以降で<code>.png</code>を<code>.ico</code>に含められることについての確認(<a href="https://github.com/audreyr/favicon-cheat-sheet/issues/9">Issue #9</a>)</p>
+
     <h2>お役立ちツール</h2>
+
     <p>オススメなのは以下の2つです:</p>
+
     <ol>
       <li><a href="http://optipng.sourceforge.net/">OptiPNG</a>: <code>.ico</code>にまとめる前に<code>.png</code>を最適化</li>
       <li><p><a href="http://www.imagemagick.org/Usage/thumbnails/#favicon">ImageMagick</a>: <a href="http://blog.morzproject.com/convert-multiple-png-images-into-a-single-icon-file/">複数の<code>.png</code>画像をまとめて、ひとつの<code>.ico</code>ファイルに変換</a></p>
     <pre>$ convert favicon-16.png favicon-32.png favicon.ico</pre></li>
     </ol>
+
     <p>試したわけではありませんが、以下のツールも役に立つでしょう:</p>
+
     <ul>
       <li>Ubuntu/Debianのパッケージである<code>icoutil</code>には<code>.png</code>から<code>.ico</code>を作成するツールが含まれています</li>
       <li>MSDNでは<a href="http://www.xiconeditor.com">X-Icon Editor</a>の利用を推奨しています</li>
@@ -225,8 +259,11 @@
       <li><a href="https://itunes.apple.com/us/app/icon-slate/id439697913">Icon Slate app</a> (OS X)</li>
       <li><a href="https://github.com/bebraw/png2ico">png2ico wrapper for ImageMagick</a></li>
     </ul>
+
     <h2>ファビコンの強制的な再読み込み</h2>
+
     <p>通常は必要ありません。開発中にうまくファビコンが再読み込みされずイライラする時だけ試してみましょう:</p>
+
     <ul>
       <li>ブラウザーのキャッシュをクリアする(Ctrl+F5またはCtrl+Shift+R)</li>
       <li>IEの場合はブラウザーを再起動する</li>
@@ -236,7 +273,9 @@
 &lt;link rel=&quot;icon&quot; sizes=&quot;16x16 32x32&quot; href=&quot;/favicon.ico?v=2&quot;&gt;</code></pre>
     </li>
     </ul>
+
     <p>大きな変更を加えたバージョンの公開時には全ての訪問者のファビコンを強制的に再読み込みさせたいこともあるでしょう:</p>
+
     <ul>
       <li><p>以下のようなマークアップ(<code>sizes</code>属性の変更を忘れずに)を加えて、バージョン番号をファイル名に入れるようにしましょう:</p>
     <pre><code class="language-html">&lt;link rel=&quot;shortcut icon&quot; href=&quot;/favicon-v2.ico&quot;&gt;
@@ -244,9 +283,13 @@
       <p><em>TODO:</em> このマークアップがうまくいかないケースのさらなる調査(<a href="https://github.com/audreyr/favicon-cheat-sheet/issues/3">Issue #3</a>).</p>
     </li>
     </ul>
+
     <h2>よくある質問</h2>
+
     <h3><code>favicon.ico</code>と<code>favicon.png</code>の両方がルートにあるとどうなりますか？</h3>
+
     <p><code>favicon.ico</code>のみを設置し、<code>favicon.png</code>は置かない方が良いと思います。その理由は:</p>
+
     <ul>
       <li><code>.ico</code>形式は複数の<code>.bmp</code>や<code>.png</code>のためのコンテナー・フォーマットです。<code>favicon.png</code>を1つ定義し、<code>favicon.ico</code>の代わりに<code>favicon.png</code>を使うようにすると、ブラウザーのリサイズ機能にすべて任せることになり、ファビコンが違う解像度でどのように表示されるかコントロールできなくなります。例えば64x64のアイコンでは文字を表示したいが、16x16のアイコンでは読めなくなるであろうことから文字は表示したくないというようなケースにも対応できます。</li>
       <li>HTML5仕様には<code>favicon.ico</code>については出てきますが、<code>favicon.png</code>については出てきません。<a href="http://www.w3.org/html/wg/drafts/html/CR/links.html#rel-icon">現在のHTML仕様によると</a>:<blockquote>
@@ -254,33 +297,55 @@
         </blockquote>
       </li>
     </ul>
+
     <p>このことについて詳しくは<a href="http://stackoverflow.com/questions/1344122/favicon-png-vs-favicon-ico-why-should-i-use-pngs-instead-of-icos/1344379#1344379">似たような質問に対してのStackOverflowでの答え</a>を参照すると良いでしょう(注: アルファ・チャンネルという点での優位性を説明した答えは間違っているので、2つ目の答えを読んでください)。</p>
+
     <h3>ファビコンはルートに置くべきというのは本当ですか？</h3>
+
     <p>いいえ、それはブラウザーやデバイスごとにファビコンのパスを指定した<code>&lt;link&gt;</code>タグを明示的に書かなかった場合に限った話です。Wikipediaの<a href="https://en.wikipedia.org/wiki/Favicon.ico">Favicon.ico記事</a>も参照してください。</p>
+
     <p>もし<code>favicon.ico</code>をルートに置いていないなら、置くかHTTPステータス・コードで<code>204</code>を返すようにしましょう。多くのツールやサービス(ブックマークやフィード・リーダー、検索エンジンのクローラーなど)がルートに<code>favicon.ico</code>があるとしてリクエストしてきますが、もし無いとHTTPステータス・コードとして<code>404</code>を受け取ることになります。最悪の場合、ファビコンよりも何倍もサイズの大きいカスタム・エラー・ページを返す羽目になるかもしれません。</p>
+
     <h3>PNGの場合は<code>favicon.png</code>という名前にする必要があるというのは本当ですか？</h3>
+
     <p>いいえ、私が偏執的に調べたところによるとそういった事実はまったくありません。</p>
+
     <h3>ICOの場合は<code>favicon.ico</code>という名前にする必要があるというのは本当ですか？</h3>
+
     <p>もし明示的に<code>&lt;link&gt;</code>タグを書かないのならばその通りです。明示的に書くのが一番確実なので、<code>favicon.ico</code>という名前にして明示的に<code>&lt;link&gt;</code>タグを書くようにしています。</p>
+
     <h3>なぜ&quot;apple-touch-icon&quot;を頭に付けないのですか？</h3>
+
     <p><code>&lt;link&gt;</code>タグを書かない場合、iOSは勝手に<code>apple-touch-icon</code>か<code>apple-touch-icon-precomposed</code>が頭についたファイルを探します。HTML5 Boilerplateなど多くがこの挙動に依存しています。しかし:</p>
+
     <ul>
       <li>明示的に<code>&lt;link&gt;</code>タグを書く方がよりわかりやすく、Appleがサポートしている形です</li>
       <li>ファイル名を<code>apple-touch-icon</code>のように決め打ちしないことにより、同じサイズのアイコンの再利用性が高まります(例えば<code>favicon-144.png</code>をWindowsのピン留めされたサイトに再利用する場合など)</li>
     </ul>
+
     <h3>なぜiOS向けに編集済みアイコン(precomposed icon)を指定するのですか？</h3>
+
     <ul>
       <li>iOSは編集済みでないアイコンに角丸と影・反射の特殊効果を付け加えます。一見それで良さそうですが、実際にはそううまくはいかず、特にデザイナーには納得の行くような結果にはなってくれません。</li>
       <li>編集済みでないアイコンにAndroid 2.1は対応していません。</li>
     </ul>
+
     <h3>なぜ絶対パスを使うのですか？</h3>
+
     <p>Firefoxの古いバージョンで絶対パスである必要があります。また絶対パスならば全てのブラウザーでサポートされているので、最も無難な選択でしょう。</p>
+
     <h3>なぜクエリ文字列を追加して全ての訪問者に強制的に再読み込みさせないのですか？</h3>
+
     <p>いくつかのプロクシーやロード・バランサーでクエリ文字列の解釈に失敗するケースが確認されています。</p>
+
     <h2>是非、寄稿を！</h2>
+
     <p>もし他の文書の引用や根拠の提示のために追加や変更を加えたい場合はプル・リクエストを送ってください。この文書を充実させてくれることを楽しみにしています！</p>
+
     <hr>
+
     <h2>訳注</h2>
+
     <ul>
       <li>OptiPNGは適切なオプションを指定しないと256色かつ透過色に減色するので、それをそのまま<code>.ico</code>に含めると透過色が失われます</li>
       <li>Markdownフォーマットの翻訳が<a href="https://github.com/hail2u/favicon-cheat-sheet">GitHubのリポジトリ</a>にあります</li>
