--- a/src/html/documents/git-cheat-sheets-jp.html
+++ b/src/html/documents/git-cheat-sheets-jp.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>Git Cheat Sheets JP</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
@@ -28,24 +30,24 @@
 
     <h3>設定をすべて表示する</h3>
 
-<pre><code>$ git config --list
+    <pre><code>$ git config --list
 </code></pre>
 
     <p>システム (/etc/gitconfig) の設定</p>
 
-<pre><code>$ git config --system --list
+    <pre><code>$ git config --system --list
 </code></pre>
 
     <p>や、ユーザーごと (~/.gitconfig) の設定</p>
 
-<pre><code>$ git config --global --list
+    <pre><code>$ git config --global --list
 </code></pre>
 
     <p>など表示する対象を絞ることもできる。</p>
 
     <h3>ユーザ名とメール・アドレスを設定する</h3>
 
-<pre><code>$ git config --global user.name "John Doe"
+    <pre><code>$ git config --global user.name "John Doe"
 $ git config --global user.email "john.doe@example.com"
 </code></pre>
 
@@ -53,19 +55,19 @@ $ git config --global user.email "john.doe@example.com"
 
     <h3>エイリアスを作成する</h3>
 
-<pre><code>$ git config --global alias.co checkout
+    <pre><code>$ git config --global alias.co checkout
 </code></pre>
 
     <p>これで <code>git co</code> = <code>git checkout</code> になる。</p>
 
     <h3>エディタを設定する</h3>
 
-<pre><code>$ git config --global core.editor vim
+    <pre><code>$ git config --global core.editor vim
 </code></pre>
 
     <h3>ページャーを設定する</h3>
 
-<pre><code>$ git config --global core.pager "nkf -s | LESSCHARSET=utf-8 less"
+    <pre><code>$ git config --global core.pager "nkf -s | LESSCHARSET=utf-8 less"
 </code></pre>
 
     <p>msysgit ではコミット・ログや diff の日本語が文字化けしてしまうので nkf 等を使って対処してやる必要がある。</p>
@@ -76,14 +78,14 @@ $ git config --global user.email "john.doe@example.com"
 
     <h3>改行コードの扱いを設定する</h3>
 
-<pre><code>$ git config --global core.autoCRLF false
+    <pre><code>$ git config --global core.autoCRLF false
 </code></pre>
 
     <p>true にすると、コミットする時に CR＋LF を LF に変換し、チェックアウトする時に LF を CR+LF に変換する。</p>
 
     <h3>リポジトリごとに設定する</h3>
 
-<pre><code>$ git config user.name "Jane Doe"
+    <pre><code>$ git config user.name "Jane Doe"
 </code></pre>
 
     <p>設定は .git/config に保存される。</p>
@@ -94,14 +96,14 @@ $ git config --global user.email "john.doe@example.com"
 
     <h3>リポジトリを作成する</h3>
 
-<pre><code>$ git init
+    <pre><code>$ git init
 </code></pre>
 
     <p>いつでもどこでも <code>git init</code> で Git リポジトリを作成することができる。</p>
 
     <h3>他のリポジトリをクローンしてリポジトリを作成する</h3>
 
-<pre><code>$ git clone git@yourbox.com:/var/git/my_project clone_project
+    <pre><code>$ git clone git@yourbox.com:/var/git/my_project clone_project
 </code></pre>
 
     <p>カレント・ディレクトリに clone_project というディレクトリが作成され、そこにリポジトリが作成される。</p>
@@ -110,38 +112,38 @@ $ git config --global user.email "john.doe@example.com"
 
     <p>リポジトリのルート・ディレクトリに .gitignore という名前のファイルを作成すると、無視するファイルを設定できる (# で始まる行はコメントとみなされる)。</p>
 
-<pre><code>*.log
+    <pre><code>*.log
 db/schema.rb
 db/schema.sql
 </code></pre>
 
     <p>Git はデフォルトで空のディレクトリを無視するので、 <code>log/</code> という名前のディレクトリを含めたいが中にあるファイルは無視したいというような場合は、 .gitignore に <code>log/*</code> を加えた上で <code>log/.gitignore</code> を作成すれば良い。</p>
 
-<pre><code>touch log/.gitignore
+    <pre><code>touch log/.gitignore
 </code></pre>
 
     <h3>全リポジトリ共通の .gitignore を設定する</h3>
 
-<pre><code>$ git config --global core.excludesfile $HOME/.gitignore
+    <pre><code>$ git config --global core.excludesfile $HOME/.gitignore
 </code></pre>
 
     <p>*.bak や .DS_Store などいちいち指定するのは手間なものをまとめて指定したい場合は ~/.gitignore を作成して <code>core.excludesfile</code> に指定すると良い。事情があって特定のリポジトリで ~/.gitignore で無視するようにしているファイル (例えば *.bak) を無視しないようにするには、そのリポジトリの .gitignore で、</p>
 
-<pre><code>!*.bak
+    <pre><code>!*.bak
 </code></pre>
 
     <p>などと行頭に <code>!</code> を付けてやれば良い。</p>
 
     <h3>すべてのファイルをステージに追加する</h3>
 
-<pre><code>$ git add .
+    <pre><code>$ git add .
 </code></pre>
 
     <p>カレント・ディレクトリのすべてのファイルとディレクトリがステージに追加される。</p>
 
     <h3>ステータスを表示する</h3>
 
-<pre><code>$ git status
+    <pre><code>$ git status
 </code></pre>
 
     <ul>
@@ -154,59 +156,59 @@ db/schema.sql
 
     <h3>コミットする</h3>
 
-<pre><code>$ git commit -m "First import"
+    <pre><code>$ git commit -m "First import"
 </code></pre>
 
     <p><em>ステージに追加されたファイル</em>だけがコミットされる。</p>
 
     <h3>管理下のファイルを表示する</h3>
 
-<pre><code>$ git ls-files
+    <pre><code>$ git ls-files
 </code></pre>
 
     <p>コミット前のファイルや .gitignore で指定されているファイルは表示されない。</p>
 
     <h3>ファイルを管理下から削除する</h3>
 
-<pre><code>$ git rm &lt;filename&gt;
+    <pre><code>$ git rm &lt;filename&gt;
 </code></pre>
 
     <p>次にコミットした時に管理下から削除される。ファイル自体も削除されるので注意が必要。</p>
 
     <h3>変更されたファイルをステージに追加してコミットする</h3>
 
-<pre><code>$ git commit -a
+    <pre><code>$ git commit -a
 </code></pre>
 
     <p>削除されたファイルは反映されるが、<em>新たに作成されたファイル</em>はステージに追加されない。</p>
 
     <h3>ファイル名を指定してステージに追加する</h3>
 
-<pre><code>$ git add &lt;filename&gt;
+    <pre><code>$ git add &lt;filename&gt;
 </code></pre>
 
     <h3>コミットする時に同時に差分も表示する</h3>
 
-<pre><code>$ git commit -v
+    <pre><code>$ git commit -v
 </code></pre>
 
     <p><code>git commit</code> と <code>git diff</code> の結果がまとめて表示される。もちろんそのままコミット・メッセージを入力してコミットできる。</p>
 
     <h3>コミット・メッセージを指定してコミットする</h3>
 
-<pre><code>$ git commit -m "This is the message describing the commit"
+    <pre><code>$ git commit -m "This is the message describing the commit"
 </code></pre>
 
     <p><code>-m</code> オプションを付けない場合は、設定済みのエディタ (<code>core.editor</code>) でコミット・メッセージの編集画面が開かれる。</p>
 
     <h3>コミットをやり直す</h3>
 
-<pre><code>$ git commit --amend
+    <pre><code>$ git commit --amend
 </code></pre>
 
     <p>直前のコミットをなかったことにしてやり直すことができる。</p>
 
-<pre><code>$ git reset --soft HEAD^
+    <pre><code>$ git reset --soft HEAD^
 $ git commit -c ORIG_HEAD
 </code></pre>
 
@@ -214,49 +216,49 @@ $ git commit -c ORIG_HEAD
 
     <h3>コミット・ログを表示する</h3>
 
-<pre><code>$ git log
+    <pre><code>$ git log
 </code></pre>
 
     <p>デフォルトではコミットのIDやコミットしたユーザー名とメール・アドレス、コミットされた日付、コミット・メッセージが表示される。</p>
 
     <h3>簡潔なコミット・ログを表示する</h3>
 
-<pre><code>$ git log --oneline
+    <pre><code>$ git log --oneline
 </code></pre>
 
     <p>各コミットが一行にまとめられたフォーマットで表示される。</p>
 
     <h3>詳細なコミット・ログを表示する</h3>
 
-<pre><code>$ git log --stat
+    <pre><code>$ git log --stat
 </code></pre>
 
     <p>コミット・メッセージに加えて、ファイルに加わった変更が <code>+</code> と <code>-</code> の記号でおおまかに表示される。</p>
 
     <h3>コミット・ログをリリース・ノート向けに整形して表示する</h3>
 
-<pre><code>$ git shortlog
+    <pre><code>$ git shortlog
 </code></pre>
 
     <p>そのままリリース・ノートに貼り付けられるようにコミット ID 等を省いてコミット・メッセージのみを羅列したフォーマットに整形する。</p>
 
     <h3>GUI で履歴を表示</h3>
 
-<pre><code>$ gitk --all
+    <pre><code>$ gitk --all
 </code></pre>
 
     <del>gitk は日本語をうまく扱えない。</del>
 
     <p><em>GUI で表示できます！</em>という程度のものと思っておいた方が無難。 Mac OS Xなら <a href="http://gitx.frim.nl/">GitX</a> が良いという話である。</p>
 
-<pre><code>$ git config --global gui.encoding utf-8
+    <pre><code>$ git config --global gui.encoding utf-8
 </code></pre>
 
     <p>とすると UTF-8 のファイルの変更差分が文字化けしなくなる (コミット・メッセージは常に文字化けしない)。設定しない場合はシステムのデフォルト・エンコーディング (Windows なら Shift_JIS) で表示しようとする。この設定は Git Gui と共通で、 gitk の設定ダイアログでは設定できない。</p>
 
     <h3>タグを付け、リモート・リポジトリにタグをプッシュする</h3>
 
-<pre><code>$ git tag "v1.3"
+    <pre><code>$ git tag "v1.3"
 $ git push --tags
 </code></pre>
 
@@ -268,52 +270,52 @@ $ git push --tags
 
     <h3>ブランチを作成</h3>
 
-<pre><code>$ git branch &lt;branchname&gt;
+    <pre><code>$ git branch &lt;branchname&gt;
 </code></pre>
 
     <p>作成するだけで、そのブランチに切り替わりはしない。</p>
 
     <h3>リモート・リポジトリにブランチをプッシュする</h3>
 
-<pre><code>$ git push origin &lt;branchname&gt;
+    <pre><code>$ git push origin &lt;branchname&gt;
 </code></pre>
 
     <p>オプションを省略した場合は設定 (<code>push.default</code>) によって挙動が大きく変わる。</p>
 
     <h3>リモート・リポジトリのブランチをダウンロード</h3>
 
-<pre><code>$ git fetch origin &lt;remote branchname&gt;:&lt;local branchname&gt;
+    <pre><code>$ git fetch origin &lt;remote branchname&gt;:&lt;local branchname&gt;
 </code></pre>
 
     <p>ダウンロードして <code>&lt;local branchname&gt;</code> でブランチを作成するのみ。</p>
 
     <h3>ローカル・リポジトリにあるすべてのブランチを表示する</h3>
 
-<pre><code>$ git branch
+    <pre><code>$ git branch
 </code></pre>
 
     <p>カレント・ブランチの前に <code>*</code> が付く。</p>
 
     <h3>すべてのブランチを表示する</h3>
 
-<pre><code>$ git branch -a
+    <pre><code>$ git branch -a
 </code></pre>
 
     <p>リモート・リポジトリのブランチも表示される。</p>
 
     <h3>ブランチを切り替える</h3>
 
-<pre><code>$ git checkout &lt;branchname&gt;
+    <pre><code>$ git checkout &lt;branchname&gt;
 </code></pre>
 
     <h3>ブランチを作成して切り替える</h3>
 
-<pre><code>$ git checkout -b &lt;branchname&gt;
+    <pre><code>$ git checkout -b &lt;branchname&gt;
 </code></pre>
 
     <p><code>&lt;branchname&gt;</code> でブランチを作成し、すぐにそれに切り替える。</p>
 
-<pre><code>$ git branch &lt;branchname&gt;
+    <pre><code>$ git branch &lt;branchname&gt;
 $ git checkout &lt;branchname&gt;
 </code></pre>
 
@@ -321,21 +323,21 @@ $ git checkout &lt;branchname&gt;
 
     <h3>ブランチを削除する</h3>
 
-<pre><code>$ git branch -d &lt;branchname&gt;
+    <pre><code>$ git branch -d &lt;branchname&gt;
 </code></pre>
 
     <p>削除しようとしたブランチが他のブランチにマージされていない場合は削除することができない。</p>
 
     <h3>ブランチを強制的に削除する</h3>
 
-<pre><code>$ git branch -D &lt;branchname&gt;
+    <pre><code>$ git branch -D &lt;branchname&gt;
 </code></pre>
 
     <p>マージされていないブランチも強制的に削除することができる。そのブランチでの作業を復活させることはできない。</p>
 
     <h3>master ブランチでの変更点ををカレント・ブランチに反映させる</h3>
 
-<pre><code>$ git rebase master
+    <pre><code>$ git rebase master
 </code></pre>
 
     <p>まずカレント・ブランチでの変更点を一時的に退避させた後、カレント・ブランチを master ブランチの最新の状態に合わせ、カレント・ブランチでの変更点を順に反映していく。 <code>rebase</code> は強力で便利ではあるが、多くの危険も持ち合わせている。使用にあたっては <code>git help rebase</code> を熟読した方が良い。</p>
@@ -344,38 +346,38 @@ $ git checkout &lt;branchname&gt;
 
     <p>まず master ブランチに戻る。</p>
 
-<pre><code>$ git checkout master
+    <pre><code>$ git checkout master
 </code></pre>
 
     <p>二つのブランチの差分を確認する。</p>
 
-<pre><code>$ git diff master xyz
+    <pre><code>$ git diff master xyz
 </code></pre>
 
     <div class="note"><p>xyz ブランチを作成した後に master ブランチへ何かしらの変更が加わっていた場合には、両ブランチの最新版同士の差異が表示される。場合によってはそのままマージすると面倒なことになるので、事前に xyz ブランチで `git rebase master` として master ブランチでの変更点を反映させるなどの下準備が必要になるだろう。</p></div>
 
     <p>マージする。</p>
 
-<pre><code>$ git merge xyz
+    <pre><code>$ git merge xyz
 </code></pre>
 
     <h3>マージした結果をコミットしない</h3>
 
-<pre><code>$ git merge --no-commit xyz
+    <pre><code>$ git merge --no-commit xyz
 </code></pre>
 
     <p>通常はマージした結果コンフリクトが無かった場合は自動的にコミットされる。</p>
 
     <h3>マージする前の状態に戻す</h3>
 
-<pre><code>$ git reset --hard ORIG_HEAD
+    <pre><code>$ git reset --hard ORIG_HEAD
 </code></pre>
 
     <p>マージした直後の場合 (マージした結果が既にコミットされている場合) <code>ORIG_HEAD</code> はマージする前の <code>HEAD</code> になる。</p>
 
     <h3>他のローカル・ブランチの特定のコミットだけをマージする</h3>
 
-<pre><code>$ git cherry-pick &lt;commit ID&gt;
+    <pre><code>$ git cherry-pick &lt;commit ID&gt;
 </code></pre>
 
     <h3>コンフリクトの解決</h3>
@@ -384,14 +386,14 @@ $ git checkout &lt;branchname&gt;
 
     <h3>現在のブランチをリセットする</h3>
 
-<pre><code>$ git checkout -f
+    <pre><code>$ git checkout -f
 </code></pre>
 
     <p>すべてのコミットしていない変更点は破棄され、ブランチの最新のコミットの状態に戻る。 <code>svn revert</code> 相当である。</p>
 
     <h3>ファイルをリセットする</h3>
 
-<pre><code>$ git checkout &lt;filename&gt;
+    <pre><code>$ git checkout &lt;filename&gt;
 </code></pre>
 
     <p><code>&lt;filename&gt;</code> のすべてのコミットしていない変更点は破棄される。</p>
@@ -402,52 +404,52 @@ $ git checkout &lt;branchname&gt;
 
     <h3>リモート・リポジトリに名前をつけて追加する</h3>
 
-<pre><code>$ git remote add laptop duo2book.local:repos/m_project
+    <pre><code>$ git remote add laptop duo2book.local:repos/m_project
 </code></pre>
 
     <p>リモート・リポジトリはいくつでも追加することができる。</p>
 
     <h3>リモート・リポジトリの変更を取得する</h3>
 
-<pre><code>$ git pull laptop
+    <pre><code>$ git pull laptop
 </code></pre>
 
     <h3>リモート・リポジトリをコピーする</h3>
 
-<pre><code>$ git fetch laptop
+    <pre><code>$ git fetch laptop
 </code></pre>
 
     <h3>ローカル・ブランチ同士をマージする</h3>
 
-<pre><code>$ git merge laptop/xyz
+    <pre><code>$ git merge laptop/xyz
 </code></pre>
 
     <p>カレント・ブランチに <code>laptop/xyz</code> (リモート・リポジトリのブランチ)をマージする。</p>
 
     <h3>リモート・リポジトリの情報を表示する</h3>
 
-<pre><code>$ git remote show laptop
+    <pre><code>$ git remote show laptop
 </code></pre>
 
     <p>リモート・リポジトリのURLやブランチの一覧、ローカル・リポジトリのブランチとの対応などが表示される。</p>
 
     <h3>ローカル・リポジトリのブランチとリモート・リポジトリののブランチを関連付ける</h3>
 
-<pre><code>$ git branch --track local_branch remote_branch
+    <pre><code>$ git branch --track local_branch remote_branch
 </code></pre>
 
     <p><code>git push</code> や <code>git pull</code> のオプションを省略した時のターゲットとして使われる。</p>
 
     <h3>オプションを指定せずにプルする</h3>
 
-<pre><code>$ git pull
+    <pre><code>$ git pull
 </code></pre>
 
     <p>カレント・ブランチがリモート・リポジトリのブランチと関連付けられている場合、オプションは省略することができる。例えば、友人 (Bob) の <em>upgrade</em> というブランチを <em>bobs_upgrade</em> に関連付ける一方で、 origin の <em>master</em> ブランチを <em>master</em> ブランチに割り当てるなど、別々のリモート・リポジトリのブランチを関連付けることもできる。</p>
 
     <h3>ローカル・ブランチからプルする</h3>
 
-<pre><code>$ git pull . experimental
+    <pre><code>$ git pull . experimental
 </code></pre>
 
     <p>ローカルの <em>experimental</em> ブランチからプルする。この場合は <code>merge</code> と等価で、オプションも共通である。</p>
@@ -456,7 +458,7 @@ $ git checkout &lt;branchname&gt;
 
     <p>ブランチと似た動作をするが、一時的な変更に特化させることによって、 <code>git branch</code> と <code>git commit</code> 、 <code>git merge</code> 等を駆使して行うことを、</p>
 
-<pre><code>$ git stash
+    <pre><code>$ git stash
 $ edit something
 $ git commit -a -m "fix something"
 $ git stash pop
@@ -466,38 +468,38 @@ $ git stash pop
 
     <h3>コミット前の変更を一時的に退避させる</h3>
 
-<pre><code>$ git stash save &lt;stashname&gt;
+    <pre><code>$ git stash save &lt;stashname&gt;
 </code></pre>
 
     <p>それまでの変更点を <code>&lt;stashname&gt;</code> に保存した後、前回のコミット時の状態に戻す。オプションは指定しなくても良く、 <code>git stash</code> だけで自動的に名前が付けられて保存される。</p>
 
     <h3>退避させたスタッシュをすべて表示する</h3>
 
-<pre><code>$ git stash list
+    <pre><code>$ git stash list
 </code></pre>
 
     <p>スタッシュはいくつでも作ることができる。</p>
 
     <h3>退避した変更を復活させる</h3>
 
-<pre><code>$ git stash apply
+    <pre><code>$ git stash apply
 </code></pre>
 
     <p>最新のスタッシュから退避した変更を復活させるだけ。オプションとして <code>&lt;stashname&gt;</code> を指定すると特定のスタッシュから退避した変更を復活させることができる。</p>
 
-<pre><code>$git stash pop
+    <pre><code>$git stash pop
 </code></pre>
 
     <p>とすると、最新のスタッシュから退避した変更を復活させた上でそのスタッシュを削除する。</p>
 
     <h3>スタッシュの削除</h3>
 
-<pre><code>$ git stash clear
+    <pre><code>$ git stash clear
 </code></pre>
 
     <p>すべてのスタッシュを削除する。特定のスタッシュを削除する場合は <code>clear</code> オプションの代わりに <code>drop</code> オプションを使う。</p>
 
-<pre><code>$ git stash drop &lt;stashname&gt;
+    <pre><code>$ git stash drop &lt;stashname&gt;
 </code></pre>
 
     <p>スタッシュを復活させることは非常に困難である。</p>
@@ -508,19 +510,19 @@ $ git stash pop
 
     <h3>SVN リポジトリをクローンしてローカルに Git リポジトリを作成する</h3>
 
-<pre><code>$ git-svn clone &lt;svn repository url&gt;
+    <pre><code>$ git-svn clone &lt;svn repository url&gt;
 </code></pre>
 
     <p>SVN リポジトリの各リビジョンごとにダウンロードし、 Git のコミット・ログを作成しなおすので、履歴が多いほど時間がかかる。</p>
 
     <h3>リモートの SVN リポジトリにコミットする</h3>
 
-<pre><code>$ git-svn dcommit
+    <pre><code>$ git-svn dcommit
 </code></pre>
 
     <h3>リモート・リポジトリ (SVN) での変更点をローカル・リポジトリ (Git) へ反映させる</h3>
 
-<pre><code>$ git-svn rebase
+    <pre><code>$ git-svn rebase
 </code></pre>
 
     <p><code>svn update</code> や <code>git pull</code> と似たような動作をする。</p>
@@ -543,19 +545,23 @@ $ git stash pop
           <li><code>git merge xyz --no-commit</code> から <code>git merge --no-commit xyz</code> とオプション設定をコマンドのすぐ後ろに変更した</li>
           <li><code>git diff master xyz</code> についての補足説明を追加した</li>
           <li>重複していた git-rebase コマンドの解説をまとめた</li>
-      </ul></li>
+        </ul>
+      </li>
       <li>2009-06-22: フィードバックの反映
         <ul>
           <li>gitk の補足説明を更新して gui.encoding についての簡単な説明を追加した</li>
-      </ul></li>
+        </ul>
+      </li>
       <li>2009-10-07: フィードバックの反映
         <ul>
           <li>実体参照化されていなかった部分を修正した</li>
-      </ul></li>
+        </ul>
+      </li>
       <li>2009-11-24: 修正
         <ul>
           <li><code>core.excludesfile</code> では <code>~/.gitignore</code> ではなく <code>$HOME/.gitignore</code> である必要があるようなので修正した</li>
-      </ul></li>
+        </ul>
+      </li>
     </ol>
 
     <hr>
