--- a/src/html/documents/httpstatus.html
+++ b/src/html/documents/httpstatus.html
@@ -1,24 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>HTTP status messages</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>HTTP status messages</h1>
+
     <p>Published on 2004-04-26 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
     <p>サーバーから返されるHTTPステータス番号のリストです。</p>
+
     <h2>1xx: Information</h2>
+
     <dl>
       <dt>100 Continue</dt>
       <dd>リクエストの一部は、サーバーに受け取られましたが、それが拒絶されていない限り、クライアントはリクエストを継続するべきです。</dd>
       <dt>101 Switching Protocols</dt>
       <dd>サーバーはプロトコルを変更しました。</dd>
     </dl>
+
     <h2>2xx: Successful</h2>
+
     <dl>
       <dt>200 OK</dt>
       <dd>リクエストは成功しました。</dd>
@@ -35,7 +42,9 @@
       <dt>206 Partial Content</dt>
       <dd>部分的 GET を受け入れました。</dd>
     </dl>
+
     <h2>3xx: Redirection</h2>
+
     <dl>
       <dt>300 Multiple Choices</dt>
       <dd>最大 5 つのアドレスのリンク先に、リンクを選択することによってジャンプすることが出来ます。</dd>
@@ -54,7 +63,9 @@
       <dt>307 Temporary Redirect</dt>
       <dd>リクエストされたページは新しい URL に一時的に移動しました。</dd>
     </dl>
+
     <h2>4xx: Client Error</h2>
+
     <dl>
       <dt>400 Bad Request</dt>
       <dd>このリクエストはサーバーに理解できません。</dd>
@@ -93,7 +104,9 @@
       <dt>417 Expectation Failed</dt>
       <dd>?</dd>
     </dl>
+
     <h2>5xx: Server Error</h2>
+
     <dl>
       <dt>500 Internal Server Error</dt>
       <dd>サーバーは予期せぬエラーに見舞われました。</dd>
