--- a/src/html/documents/sass-tutorial.html
+++ b/src/html/documents/sass-tutorial.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>Sass - チュートリアル</title>
+
     <link rel="stylesheet" href="/styles/natural.min.css">
+
     <style>
       .block, .compare {
         overflow: hidden;
