--- a/src/html/documents/web-typography-best-practices.html
+++ b/src/html/documents/web-typography-best-practices.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
 
     <title>ウェブ・タイポグラフィーのベスト・プラクティス</title>
