--- a/src/html/documents/css2bsi.html
+++ b/src/html/documents/css2bsi.html
@@ -1,17 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>CSS 2 browser support information</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>CSS 2 browser support information</h1>
+
     <p>Published on 2004-04-26 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
     <p>各ブラウザのCSS 2.0で定義されているプロパティなどのサポート状況の表です。</p>
+
     <h2>略称の意味</h2>
+
     <ul>
       <li>WIE4 - Windows Internet Explorer 4</li>
       <li>WIE5 - Windows Internet Explorer 5/5.01</li>
@@ -22,12 +27,15 @@
       <li>O6 - Opera 6.x</li>
       <li>MIE5 - Macintosh Internet Explorer 5(strictモード)</li>
     </ul>
+
     <p>記号の意味</p>
+
     <ul>
       <li>○ - サポートしている。または、多少のバグがあるがサポートしている。</li>
       <li>△ - 普通に使うにはちょっとつらいバグがあるが、サポートしている。</li>
       <li>× - サポートしていない。または、使い物にならないバグがあるが、サポートしている。</li>
     </ul>
+
     <table>
       <tr>
         <th>@ルール</th>
