--- a/src/html/documents/css2pt.html
+++ b/src/html/documents/css2pt.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>CSS2 property table</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>CSS2 property table</h1>
+
     <p>Published on 2004-03-04 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
     <table>
