--- a/src/html/documents/democratic-design.html
+++ b/src/html/documents/democratic-design.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width" name="viewport">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+
     <title>民主的なデザイン</title>
+
     <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
