--- a/src/html/documents/markup.html
+++ b/src/html/documents/markup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width" name="viewport">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
 
     <title>“マークアップ”するということ ～ HTML5勧告に寄せて ～</title>
 
