--- a/src/html/documents/opjsdom.html
+++ b/src/html/documents/opjsdom.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>Support for JavaScript and JScript Objects in Opera</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
+
     <style type="text/css">
       li.o4 {
         color:#993333;
@@ -36,11 +39,15 @@
   </head>
   <body>
     <h1>Support for JavaScript and JScript Objects in Opera</h1>
+
     <p>Published on 2004-04-26 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
     <p>OperaはECMAScript第二版と第三版を完全にサポートしており、DOMレベル2も完全にサポートする予定です(独立したDOMに関する文書も将来出す予定です)。</p>
+
     <p>現在、試験的にOperaは一部の例外を除き、JScriptのサブセットはもちろんJavaScript 1.4もサポートしています。OperaはUser AgentをMicrosoft Internet Explorerと設定した場合のみJScriptのプロパティをサポートします。これはFile &gt; Preferences &gt; Connections &gt; Browser identificationから&quot;Identify as MSIE 5.0&quot;とすることによって設定できます。</p>
+
     <h2>Legend</h2>
+
     <dl>
       <dt>Object</dt>
       <dd>
@@ -57,7 +64,9 @@
         </ul>
       </dd>
     </dl>
+
     <h2>JavaScript and JScript objects</h2>
+
     <dl>
       <dt>Button</dt>
       <dd>
@@ -490,6 +499,7 @@
         </ul>
       </dd>
     </dl>
+
     <p>Copyright Opera Software ASA. All rights reserved.</p>
 
     <hr>
