--- a/src/html/documents/ps_lightning.html
+++ b/src/html/documents/ps_lightning.html
@@ -1,36 +1,60 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>Draw lightning in Photoshop 7</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>Draw lightning in Photoshop 7</h1>
+
     <p>Published on 2004-03-04 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
     <p>1. 適当な大きさ(ここでは384*256でやってます)で新規画像を作成</p>
+
     <p class="image"><img src="/images/documents/ps_lightning01.png" alt="新規" width="392" height="283"></p>
+
     <hr>
+
     <p>2. 黒(#000000)→白(#FFFFFF)の線形グラデーションで、上端から下端まで塗りつぶし</p>
+
     <p class="image"><img src="/images/documents/ps_lightning02.png" alt="グラデーションツール" width="392" height="283"></p>
+
     <hr>
+
     <p>3. メニューから、フィルタ→描画→雲模様 2を適用。</p>
+
     <p class="image"><img src="/images/documents/ps_lightning03.png" alt="雲模様 2" width="392" height="283"></p>
+
     <hr>
+
     <p>4. メニューから、イメージ→色調補正→階調の反転(Ctrl+I)を適用</p>
+
     <p class="image"><img src="/images/documents/ps_lightning04.png" alt="階調の反転" width="392" height="283"></p>
+
     <hr>
+
     <p>5. メニューから、イメージ→色調補正→レベル補正(Ctrl+L)を、入力レベルを左から73/0.10/255で適用</p>
+
     <p class="image"><img src="/images/documents/ps_lightning05.png" alt="レベル補正" width="392" height="283"></p>
+
     <hr>
+
     <p>6. メニューから、イメージ→カンバスの回転→90°(時計回り)を適用(もちろん半時計回りでも可)</p>
+
     <p class="image"><img src="/images/documents/ps_lightning06.png" alt="カンバスの回転" width="264" height="411"></p>
+
     <hr>
+
     <p>7. メニューから、イメージ→色調補正→カラーバランス(Ctrl+B)を適用し、色を調節</p>
+
     <p class="image"><img src="/images/documents/ps_lightning07.png" alt="カラーバランス" width="264" height="411"></p>
+
     <hr>
+
     <p>以上。</p>
 
     <hr>
