--- a/src/html/documents/ps_sketchpbyp.html
+++ b/src/html/documents/ps_sketchpbyp.html
@@ -1,33 +1,54 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>Sketch photo by pencil in Photoshop 7</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>Sketch photo by pencil in Photoshop 7</h1>
+
     <p>Published on 2004-03-04 under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></p>
 
     <p>1. 適当な写真を開く</p>
+
     <p class="image"><img src="/images/documents/ps_sketchpbyp01.png" alt="開く" width="376" height="303"></p>
+
     <hr>
+
     <p>2. メニューから、レイヤー→レイヤーの複製を適用</p>
+
     <p class="image"><img src="/images/documents/ps_sketchpbyp02.png" alt="レイヤーの複製" width="376" height="303"></p>
+
     <hr>
+
     <p>3. メニューから、イメージ→色調補正→階調の反転(Ctrl+I)を適用</p>
+
     <p class="image"><img src="/images/documents/ps_sketchpbyp03.png" alt="階調の反転" width="376" height="303"></p>
+
     <hr>
+
     <p>4. メニューから、イメージ→モード→グレースケールを適用(画像を統合するか？というダイアログが出るが、統合しないを選択)</p>
+
     <p class="image"><img src="/images/documents/ps_sketchpbyp04.png" alt="グレースケール" width="376" height="303"></p>
+
     <hr>
+
     <p>5. レイヤーパレットから、レイヤーの描画モードを覆い焼き (リニア)にする</p>
+
     <p class="image"><img src="/images/documents/ps_sketchpbyp05.png" alt="描画モードを変更" width="376" height="303"></p>
+
     <hr>
+
     <p>6. メニューから、フィルタ→ぼかし→ぼかし (ガウス)を、半径1～5くらいで適用</p>
+
     <p class="image"><img src="/images/documents/ps_sketchpbyp06.png" alt="ぼかし (ガウス)" width="376" height="303"></p>
+
     <hr>
+
     <p>以上。</p>
 
     <hr>
