--- a/src/html/documents/rss20notes.html
+++ b/src/html/documents/rss20notes.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>RSS 2.0 Notes</title>
+
     <link rel="stylesheet" type="text/css" href="/styles/natural.min.css" />
   </head>
   <body>
