--- a/src/html/documents/sass-and-sassy-css.html
+++ b/src/html/documents/sass-and-sassy-css.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <title>Sass、そしてSassy CSS (SCSS)</title>
+
     <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
