Add Share Buttons widget

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -67,6 +67,10 @@
 
           <p>必要のないものを隠し、適切な位置で改行されるように調節しています。</p>
         </section>
+
+        <aside class="share-buttons">
+          <p><a class="twitter" href="https://twitter.com/intent/tweet?text=Style+Guide+-+About+-+Hail2u.net&url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F&via=hail2u_">Tweet</a></p>
+        </aside>
       </article>
 
       <nav id="toc">
