--- a/src/css/test.html
+++ b/src/css/test.html
@@ -69,7 +69,11 @@
         </section>
 
         <aside class="share-buttons">
-          <p><a class="twitter" href="https://twitter.com/intent/tweet?text=Style+Guide+-+About+-+Hail2u.net&url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F&via=hail2u_">Tweet</a></p>
+          <ul>
+            <li><a class="twitter" href="https://twitter.com/intent/tweet?text=Style+Guide+-+About+-+Hail2u.net&url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F&via=hail2u_">Twitterでシェア</a></li>
+            <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">Facebookでシェア</a></li>
+            <li><a class="hatena" href="https://b.hatena.ne.jp/add?title=Style+Guide+-+About+-+Hail2u.net&url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">はてなでブックマーク</a></li>
+          </ul>
         </aside>
       </article>
 
