--- a/src/css/test.html
+++ b/src/css/test.html
@@ -70,9 +70,9 @@
 
         <aside class="share-buttons">
           <ul>
-            <li><a class="twitter" href="https://twitter.com/intent/tweet?text=Style+Guide+-+About+-+Hail2u.net&url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F&via=hail2u_">Twitterでシェア</a></li>
-            <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">Facebookでシェア</a></li>
-            <li><a class="hatena" href="https://b.hatena.ne.jp/add?title=Style+Guide+-+About+-+Hail2u.net&url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">はてなでブックマーク</a></li>
+            <li><a class="twitter" href="https://twitter.com/intent/tweet?text=Style+Guide+-+About+-+Hail2u.net&url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F&via=hail2u_">Twitter</a></li>
+            <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">Facebook</a></li>
+            <li><a class="hatena" href="https://b.hatena.ne.jp/add?title=Style+Guide+-+About+-+Hail2u.net&url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">はてな</a></li>
           </ul>
         </aside>
       </article>
