Remove unused class

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -37,7 +37,7 @@
     </header>
 
     <main class="content" role="main">
-      <article id="introduction" class="has-image">
+      <article id="introduction">
         <h1 class="first-heading">Style Guide - About</h1>
 
         <footer class="section-footer">
