Update debug information

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -56,7 +56,7 @@
 
           <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドはCSSグラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
 
-          <p>また、このセクションの大見出しをクリックすることでタグラインの切り替えを、日付をクリックすることでアイキャッチ画像の切り替えを、それぞれ行うことができます。</p>
+          <p>また、日付をクリックすることでアイキャッチ画像の切り替えを行うことができます。</p>
         </section>
 
         <section>
