--- a/src/css/test.html
+++ b/src/css/test.html
@@ -116,7 +116,7 @@
       </nav>
 
       <section id="coding-rules">
-        <h1 class="first-heading">コーディング上の決め事</h1>
+        <h1>コーディング上の決め事</h1>
 
         <p>以下はマークアップやスタイル、スクリプトにおけるコーディング規約もどきです。</p>
 
