--- a/src/css/test.html
+++ b/src/css/test.html
@@ -833,7 +833,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <li><a href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
       </ul>
 
-      <p id="author" class="byline">Made by <a href="https://kyonagashima.com/" rel="author">Kyo Nagashima</a>.</p>
+      <p id="author" class="byline">Made by <a href="https://kyonagashima.com/" rel="author">Kyo Nagashima</a></p>
     </footer>
   </body>
 </html>
