Add description after First Heading

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta content="width=device-width" name="viewport">
-    <meta content="Hail2u.netで使われているマークアップとスタイルの詳細の解説、兼プレビューを提供するページです。" name="description">
+    <meta content="Hail2u.netで使われているマークアップやスタイルの解説兼プレビューのページです" name="description">
 
     <title>Style Guide - About - Hail2u.net</title>
 
