Add prerender type to Read Older widget

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -736,7 +736,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <pre><code class="language-html">&lt;nav <mark>class=&quot;read-older&quot;</mark>&gt;
   &lt;a
-    rel=&quot;prev&quot;
+    rel=&quot;prerender prev&quot;
     href=&quot;#&quot;&gt;
     &lt;p&gt;...&lt;/p&gt;
   &lt;/a&gt;
@@ -745,7 +745,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       </section>
 
       <nav class="read-older">
-        <a href="#" rel="prev">
+        <a href="#" rel="prerender prev">
           <p>Suspendisse commodo odio mi, at ultrices risus consectetur at, etiam at enim non magna mollis gravida at ut arcu, aenean tempus sem dolor, non consectetur nisi vehicula nec</p>
         </a>
       </nav>
