--- a/src/css/test.html
+++ b/src/css/test.html
@@ -7,8 +7,9 @@
 
     <title>Style Guide - About - Hail2u.net</title>
 
-    <link href="https://hail2u.net/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
+    <link href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">
     <link href="https://hail2u.net/about/style-guide/" rel="canonical">
+    <link href="https://hail2u.net/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">
 
     <link href="common.css" media="not print" rel="stylesheet">
@@ -828,11 +829,6 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     </aside>
 
     <footer class="global-footer" role="contentinfo">
-      <ul class="footlinks">
-        <li><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a></li>
-        <li><a href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">RSS</a></li>
-      </ul>
-
       <p id="author" class="byline">Made by <a href="https://kyonagashima.com/" rel="author">Kyo Nagashima</a></p>
     </footer>
   </body>
