--- a/src/css/test.html
+++ b/src/css/test.html
@@ -192,23 +192,13 @@
         <table>
           <tr>
             <th rowspan="3">本文</th>
-            <td class="font-family-body">Palatino</td>
+            <td class="font-family-body">San FranciscoまたはSegoe UI</td>
           </tr>
           <tr>
             <td class="font-family-body">The quick brown fox jumps over the lazy dog.</td>
           </tr>
           <tr>
             <td class="font-family-body bold">The quick brown fox jumps over the lazy dog.</td>
-          </tr>
-          <tr>
-            <th rowspan="3">見出し等</th>
-            <td class="font-family-heading">San FranciscoまたはSegoe UI</td>
-          </tr>
-          <tr>
-            <td class="font-family-heading">The quick brown fox jumps over the lazy dog.</td>
-          </tr>
-          <tr>
-            <td class="font-family-heading bold">The quick brown fox jumps over the lazy dog.</td>
           </tr>
           <tr>
             <th rowspan="3">コード</th>
