Update placeholder text

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -596,7 +596,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <p>Vestibulum ultricies urna risus. Duis vitae fringilla velit. Etiam vestibulum, tortor nec vehicula mattis, magna ligula scelerisque risus, sed viverra orci ligula nec purus. Vivamus eleifend, magna id fermentum malesuada, orci lorem tincidunt ipsum, ut elementum purus mauris at est.</p>
 
-        <p>Duis tincidunt metus magna, quis molestie eros venenatis ac. Duis a accumsan nisl, nec egestas magna. Duis eu auctor lacus, rutrum ullamcorper mi. Cras tempor eu sem sit amet dignissim. Phasellus sed sapien nec augue molestie feugiat.</p>
+        <p>Mauris sagittis tellus magna, sit amet sodales sem bibendum sit amet. Nam pharetra vulputate leo vitae faucibus. Praesent ac semper augue, ut dignissim dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean fermentum dui sit amet leo auctor suscipit. Nulla nulla lacus, elementum convallis aliquet eget, tincidunt quis diam. Donec id dictum justo, at blandit ex. Duis fringilla fringilla odio. Cras ut ultricies enim. Donec pharetra leo ut aliquet volutpat. Nullam dapibus augue dolor, sit amet congue nulla euismod ac. Mauris in eros et elit accumsan pulvinar.</p>
 
         <pre><code class="language-html">&lt;figure <mark>class=&quot;drop&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
@@ -744,7 +744,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
       <nav class="read-older">
         <a href="#" rel="prerender prev">
-          <p>Suspendisse commodo odio mi, at ultrices risus consectetur at, etiam at enim non magna mollis gravida at ut arcu, aenean tempus sem dolor, non consectetur nisi vehicula nec</p>
+          <P>Suspendisse Commodo Odio Mi, At Ultrices Risus Consectetur At, Etiam At Enim Non Magna Mollis Gravida At Ut Arcu, Aenean Tempus Sem Dolor, Non Consectetur Nisi Vehicula Nec</P>
         </a>
       </nav>
 
@@ -752,7 +752,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <h1>検索フォーム</h1>
 
         <form class="searchbox" action="https://www.duckduckgo.com/" role="search">
-          <input class="query" name="q" placeholder="検索したい言葉を入力し、Searchボタンを押す" size="32" type="search">
+          <input class="query" name="q" placeholder="検索したい言葉を入力し、Searchボタンを押してください" size="32" type="search">
           <input class="button" type="submit" value="Search">
         </form>
 
