Add Fat Links widget

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -99,6 +99,7 @@
             <ol>
               <li><a href="#bordered-image">枠線付き画像</a></li>
               <li><a href="#drop-image">画像の飛び出し</a></li>
+              <li><a href="#fat-links-block">大きなリンク</a></li>
               <li><a href="#fill-block">幅いっぱい</a></li>
               <li><a href="#flat-list-block">フラット・リスト</a></li>
               <li><a href="#float-image">浮かんだ画像</a></li>
@@ -610,6 +611,71 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </figure>
 
         <p>Cras ipsum nisi, vestibulum a aliquam in, aliquet ac augue. Ut sit amet nisl sit amet leo ullamcorper imperdiet id non orci. Etiam at auctor quam, a volutpat nulla. Aliquam posuere magna sit amet auctor vulputate. Vivamus at nisi vel magna bibendum egestas. Vivamus imperdiet sem at ipsum tempor mattis a nec justo. Sed sit amet lectus in libero euismod rhoncus et id velit. Vestibulum at rutrum urna, in dignissim mi. Aenean in lectus id ipsum ornare molestie. Mauris sit amet ipsum pharetra, luctus diam sodales, vehicula ipsum. Nullam tincidunt porttitor ante at pretium. Phasellus varius, metus in mollis commodo, augue lorem aliquet magna, condimentum condimentum ante tellus eleifend odio. Nullam fermentum porta lacus quis placerat.</p>
+      </section>
+
+      <section id="fat-links-block">
+        <h1>大きなリンク</h1>
+
+        <pre class="language-html"><code>&lt;section <mark>class=&quot;fat-links&quot;</mark>&gt;
+  &lt;section&gt;
+    &lt;a href=&quot;#&quot;&gt;
+      &lt;h1&gt;...&lt;/h1&gt;
+
+      &lt;p&gt;...&lt;/p&gt;
+    &lt;/a&gt;
+  &lt;/section&gt;
+&lt;/section&gt;
+</code></pre>
+      </section>
+
+      <section class="fat-links">
+        <section>
+          <a href="#">
+            <h1>Sed Malesuada</h1>
+
+            <p>Nunc quis felis dui. Morbi porta mauris id urna mollis.</p>
+          </a>
+        </section>
+
+        <section>
+          <a href="#">
+            <h1>Nulla Vel Felis</h1>
+
+            <p>Sed consectetur, nunc ut pretium venenatis, diam elit.</p>
+          </a>
+        </section>
+
+        <section>
+          <a href="#">
+            <h1>Pellentesque</h1>
+
+            <p>Aenean maximus sit amet leo vitae pharetra.</p>
+          </a>
+        </section>
+
+        <section>
+          <a href="#">
+            <h1>Duis Aliquet</h1>
+
+            <p>Felis, id auctor urna rhoncus auctor hendrerit.</p>
+          </a>
+        </section>
+
+        <section>
+          <a href="#">
+            <h1>Cras Venenatis</h1>
+
+            <p>Praesent libero felis, molestie nec mattis et, luctus ac tellus.</p>
+          </a>
+        </section>
+
+        <section>
+          <a href="#">
+            <h1>Cras</h1>
+
+            <p>Vestibulum congue gravida risus, id eleifend ligula.</p>
+          </a>
+        </section>
       </section>
 
       <section id="fill-block">
