--- a/src/css/test.html
+++ b/src/css/test.html
@@ -20,6 +20,7 @@
     <script defer src="../js/ellipsis-title.js"></script>
     <script defer src="../js/toggle-column.js"></script>
     <script defer src="../js/toggle-eyecatch.js"></script>
+    <script defer src="../js/toggle-home.js"></script>
     <script defer src="../js/toggle-outline.js"></script>
   </head>
 
@@ -56,7 +57,7 @@
 
           <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドはCSSグラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
 
-          <p>また、日付をクリックすることでアイキャッチ画像の切り替えを行うことができます。</p>
+          <p>また、最初の見出しをクリックすることでホームでのスタイルへの切り替えを、日付をクリックすることでアイキャッチ画像の切り替えを、それぞれ行うことができます。</p>
         </section>
 
         <section>
