--- a/src/css/test.html
+++ b/src/css/test.html
@@ -104,6 +104,7 @@
               <li><a href="#flat-list-block">フラット・リスト</a></li>
               <li><a href="#float-image">浮かんだ画像</a></li>
               <li><a href="#footnote-block">脚注</a></li>
+              <li><a href="#hang-heading">見出しの飛び出し</a></li>
               <li><a href="#post-list-block">記事リスト</a></li>
               <li><a href="#pull-quote-block">抜粋見出し（Pull Quote）</a></li>
               <li><a href="#read-older-block">古い記事を読む</a></li>
@@ -675,6 +676,15 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <pre><code class="language-html">&lt;aside <mark>class=&quot;footnote&quot;</mark>&gt;
   &lt;p&gt;...&lt;/p&gt;
 &lt;/aside&gt;
+</code></pre>
+      </section>
+
+      <section id="hang-heading">
+        <h1 class="hang">見出しの飛び出し</h1>
+
+        <p>Curabitur ut ante consectetur, facilisis ex sed, dapibus lectus. Duis mollis sodales lacinia. Duis eget auctor lectus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin sit amet laoreet leo, ut rutrum nibh. Mauris ut pulvinar justo, non posuere nibh. Aenean at quam ante. Suspendisse sit amet tristique nisl. Sed nec facilisis diam. Ut sapien libero, tempus in consectetur condimentum, aliquet vitae velit. Praesent consequat fermentum neque, vitae fringilla nisi interdum vulputate. Quisque pellentesque leo eu lectus gravida, eu eleifend augue eleifend. Curabitur sed finibus lorem. Suspendisse potenti. Morbi ornare eros eu rhoncus aliquet.</p>
+
+        <pre><code class="language-html">&lt;h1 <mark>class=&quot;hang&quot;</mark>&gt;...&lt;/h1&gt;
 </code></pre>
       </section>
 
